--- a/index.html
+++ b/index.html
@@ -23,23 +23,28 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="img/ELaisa-removebg-preview (2).png"
                             alt="Logo de la Marca Elaisa" class="d-md-none d-sm-inline logo"></a>
-                            <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                aria-controls="offcanvasRight"><img src="img/nav-icon.png" alt="icono nav"></button>
+                    <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="img/nav-icon.png"
+                            alt="icono nav"></button>
                     </button>
                     <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                         id="navbarSupportedContent">
                         <ul class="navbar-nav desk">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/pro.html">Productos</a>
+                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/clothes.png"
+                                        alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/proy.html">Proyectos</a>
+                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/rocket.png"
+                                        alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/nos.html">Nosotros</a>
+                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/about-us-22.png"
+                                        alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/contact.html">Contacto</a>
+                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/people.png"
+                                        alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -47,27 +52,32 @@
             </nav>
             <nav>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                aria-labelledby="offcanvasRightLabel">
-                <div class="offcanvas-header buscbot d-flex justify-content-end">
-                    <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body buscbot">
+                    aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header buscbot d-flex justify-content-end">
+                        <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body buscbot">
                         <ul class="navbar-nav buscbot__phone">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/clothes.png" alt="icono de ropa"> Productos</a>
+                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/clothes.png"
+                                        alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/rocket.png" alt="icono de proyectos">Proyectos</a>
+                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/rocket.png"
+                                        alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/about-us-22.png" alt="icono de nosotros">Nosotros</a>
+                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/about-us-22.png"
+                                        alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/people.png" alt="icono de contacto">Contacto</a>
+                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/people.png"
+                                        alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
+                    </div>
                 </div>
-            </div>
             </nav>
         </header>
         <main class="mainindex">
@@ -117,12 +127,13 @@
                 <div class="mainindex__sec3__boton"><button><a href="pages/pro.html">MÁS PRODUCTOS</a></button></div>
                 <hr>
             </section>
+            <!-- desktop -->
             <section class="mainindex__sec4">
-                <h2 id="h1">Donde encontrarnos</h2>
+                <h2>Donde encontrarnos</h2>
                 <div class="mainindex__sec4__div1" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
                     <img src="img/maxresdefault.jpg" alt="sede de Cipolletti">
-                    <h3 id="h2">Sede de Cipolletti</h3>
+                    <h3>Sede de Cipolletti</h3>
                     <p>
                         Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
                         mundo.
@@ -132,7 +143,7 @@
                 <div class="mainindex__sec4__div2" data-aos="fade-left" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
                     <img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
-                    <h3 id="h2">Sede de Allen</h3>
+                    <h3>Sede de Allen</h3>
                     <p>
                         Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
                         empleados.
@@ -142,13 +153,42 @@
                 <div class="mainindex__sec4__div3" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
                     <img src="img/Esprit sede interior 728.jpg" alt="sede de roca">
-                    <h3 id="h2">Sede de Roca</h3>
+                    <h3>Sede de Roca</h3>
                     <p>
                         Nuestra mas nueva sucursal que abro este año que desde entonces ha sido un rotundo exito.
                     </p>
                     <div></div>
                 </div>
                 <div class="mainindex__sec4__boton"><button><a href="pages/contact.html">CONTACTANOS</a></button></div>
+            </section>
+        <!-- mobile -->
+            <section class="mainindex__sec4m">
+                <h2>Donde encontrarnos</h2>
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/Esprit sede interior 728.jpg" alt="sede de roca" class="d-block w-100">
+                        <h3>Sede de Roca</h3>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen" class="d-block w-100">
+                        <h3>Sede de Allen</h3>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/maxresdefault.jpg" alt="sede de Cipolletti" class="d-block w-100">
+                        <h3>Sede de Cipolletti</h3>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                  <div class="mainindex__sec4m__boton"><button><a href="pages/contact.html">CONTACTANOS</a></button></div>
             </section>
         </main>
         <footer class="footer">
