--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <img src="img/Esprit sede interior 728.jpg" alt="sede de roca">
                     <h3>Sede de Roca</h3>
                     <p>
-                        Nuestra mas nueva sucursal que abro este año que desde entonces ha sido un rotundo exito.
+                        Nuestra mas nueva sucursal que abrio este año que desde entonces ha sido un rotundo exito.
                     </p>
                     <div></div>
                 </div>
