--- a/pages/proy.html
+++ b/pages/proy.html
@@ -30,16 +30,20 @@
                         id="navbarSupportedContent">
                         <ul class="navbar-nav desk">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pro.html">Productos</a>
+                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png"
+                                        alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="proy.html">Proyectos</a>
+                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png"
+                                        alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="nos.html">Nosotros</a>
+                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png"
+                                        alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="contact.html">Contacto</a>
+                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png"
+                                        alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
                     </div>
