--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,24 +21,29 @@
             <nav class="navbar navbar-expand-sm nav1">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
-                        alt="Logo de la Marca Elaisa"></a>
-                            <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                aria-controls="offcanvasRight"><img src="../img/nav-icon.png" alt="icono nav"></button>
+                            alt="Logo de la Marca Elaisa"></a>
+                    <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="../img/nav-icon.png"
+                            alt="icono nav"></button>
                     </button>
                     <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                         id="navbarSupportedContent">
                         <ul class="navbar-nav desk">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pro.html">Productos</a>
+                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png"
+                                        alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="proy.html">Proyectos</a>
+                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png"
+                                        alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="nos.html">Nosotros</a>
+                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png"
+                                        alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="contact.html">Contacto</a>
+                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png"
+                                        alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -46,42 +51,54 @@
             </nav>
             <nav>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                aria-labelledby="offcanvasRightLabel">
-                <div class="offcanvas-header buscbot d-flex justify-content-end">
-                    <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body buscbot">
+                    aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header buscbot d-flex justify-content-end">
+                        <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body buscbot">
                         <ul class="navbar-nav buscbot__phone">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png" alt="icono de ropa"> Productos</a>
+                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png"
+                                        alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png" alt="icono de proyectos">Proyectos</a>
+                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png"
+                                        alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png" alt="icono de nosotros">Nosotros</a>
+                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png"
+                                        alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png" alt="icono de contacto">Contacto</a>
+                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png"
+                                        alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
+                    </div>
                 </div>
-            </div>
             </nav>
         </header>
         <main class="main">
             <div class="main__caja">
-                <h1 id="h1">Inicia sesión en Elaisa</h1>
-                <div>
-                    <label for="exampleFormControlInput1" class="form-label">Nombre de usuario</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <h1>Contactanos</h1>
+                <div class="main__caja__nom">
+                    <label for="name" class="form-label">Nombre y apellido</label>
+                    <input type="text" class="form-control" id="name" placeholder="Escribe tu nombre">
                 </div>
-                <div>
-                    <label for="exampleFormControlInput1" class="form-label">Direccion de E-mail</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <div class="main__caja__email">
+                    <label for="mail" class="form-label">Direccion de E-mail</label>
+                    <input type="email" class="form-control" id="mail" placeholder="Ej. name@example.com">
                 </div>
-                <input class="reset" type="reset">
-                <input class="submit" type="submit">
+                <div class="main__caja__text">
+                    <label for="textoContacto" class="form-label">¿Por qué nos quieres contactar?</label>
+                    <input type="text" class="form-control" id="textoContacto"
+                        placeholder="Escribe sobre lo que quieras...">
+                </div>
+                <div class="main__caja__bot">
+                    <input class="reset" type="reset">
+                    <input class="submit" type="submit">
+                </div>
             </div>
         </main>
         <footer class="footer">
