--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <nav class="navbar navbar-expand-sm nav1">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="img/ELaisa-removebg-preview (2).png"
+                    <a class="navbar-brand" href="index.html"><img src="img/ELaisa-removebg-preview (2).png"
                             alt="Logo de la Marca Elaisa" class="d-md-none d-sm-inline logo"></a>
                     <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="img/nav-icon.png"
