arreglo de scss

--- a/pages/proy.html
+++ b/pages/proy.html
@@ -23,8 +23,9 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
                             alt="Logo de la Marca Elaisa"></a>
-                            <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                aria-controls="offcanvasRight"><img src="../img/nav-icon.png" alt="icono nav"></button>
+                    <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="../img/nav-icon.png"
+                            alt="icono nav"></button>
                     </button>
                     <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                         id="navbarSupportedContent">
@@ -51,31 +52,52 @@
             </nav>
             <nav>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                aria-labelledby="offcanvasRightLabel">
-                <div class="offcanvas-header buscbot d-flex justify-content-end">
-                    <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body buscbot">
+                    aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header buscbot d-flex justify-content-end">
+                        <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body buscbot">
                         <ul class="navbar-nav buscbot__phone">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png" alt="icono de ropa"> Productos</a>
+                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png"
+                                        alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png" alt="icono de proyectos">Proyectos</a>
+                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png"
+                                        alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png" alt="icono de nosotros">Nosotros</a>
+                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png"
+                                        alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png" alt="icono de contacto">Contacto</a>
+                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png"
+                                        alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
+                    </div>
                 </div>
-            </div>
             </nav>
         </header>
-        <main>
-            <h1 id="h1">Nuestros proyectos</h1>
+        <main class="mainproy">
+            <h1>Nuestros proyectos</h1>
+            <section class="mainproy__sec"><img src="../img/proyecto1.jpg" alt="">
+                <h2>Beach clean up</h2>
+                <p>Desde 2019 participamos en un proyecto para la limpieza de las playas, con la ayuda de una ONG, yendo a las playas más reconditas del mundo.</p>
+            </section>
+            <section class="mainproy__sec"><img src="../img/proyecto2.jpg" alt="">
+                <h2>Limpiar mares</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi cum nulla aperiam ullam provident
+                    voluptatum illum. Facilis architecto quibusdam asperiores reprehenderit? Ullam fugiat explicabo
+                    asperiores corporis libero vero iusto amet?</p>
+            </section>
+            <section class="mainproy__sec"><img src="../img/proyecto3.jpg" alt="">
+                <h2>Cuidar el agua del mundo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nihil iste, debitis neque odit,
+                    doloremque reprehenderit illo molestiae explicabo quod nulla eum sapiente architecto labore
+                    temporibus libero numquam, quidem beatae.</p>
+            </section>
         </main>
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
