--- a/pages/proy.html
+++ b/pages/proy.html
@@ -12,8 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-
-    <title>Sedes</title>
+    <title>Proyectos</title>
 </head>
 
 <body>
@@ -84,19 +83,15 @@
             <h1>Nuestros proyectos</h1>
             <section class="mainproy__sec"><img src="../img/proyecto1.jpg" alt="">
                 <h2>Beach clean up</h2>
-                <p>Desde 2019 participamos en un proyecto para la limpieza de las playas, con la ayuda de una ONG, yendo a las playas más reconditas del mundo.</p>
+                <p>Desde 2019 participamos en un proyecto para la limpieza de las playas, con la ayuda de una ONG, yendo a las playas más reconditas del mundo.<span class="mainproy__sec__span"> Teniendo como objetivo el aumento del uso de esas plyas para actividades recreativas de los lugareños o turistas.</span></p>
             </section>
             <section class="mainproy__sec"><img src="../img/proyecto2.jpg" alt="">
-                <h2>Limpiar mares</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi cum nulla aperiam ullam provident
-                    voluptatum illum. Facilis architecto quibusdam asperiores reprehenderit? Ullam fugiat explicabo
-                    asperiores corporis libero vero iusto amet?</p>
+                <h2>Limpia mares</h2>
+                <p>Con la ayuda de la empresa FTA nos encargamos de utilizar un porcentaje de las ventas para la limpieza de los mares del mundo. <span class="mainproy__sec__span"> Liberandolos cualquier tipo de residuo que tuviese como el petroleo o plásticos</span></p>
             </section>
             <section class="mainproy__sec"><img src="../img/proyecto3.jpg" alt="">
                 <h2>Cuidar el agua del mundo</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nihil iste, debitis neque odit,
-                    doloremque reprehenderit illo molestiae explicabo quod nulla eum sapiente architecto labore
-                    temporibus libero numquam, quidem beatae.</p>
+                <p>Desde nustras compañia queremos concientizar sobre el uso que le damos al agua de manera cotidiana remarcando continuamente los cuidados que se deben tomar para la protección de esta. <span class="mainproy__sec__span">Debido a su alta importancia tanto en las casas de las personas como en las actividades economicas</span></p>
             </section>
         </main>
         <footer class="footer">
