proyectos mediadesk y mobile e inicio de productos

--- a/pages/pro.html
+++ b/pages/pro.html
@@ -76,9 +76,9 @@
             </nav>
         </header>
         <main>
-            <h1 id="h1">Nuestros productos</h1>
+            <h1>Nuestros productos</h1>
             <section class="contenedorpro">
-                <div class="contenedorpro__hijo">
+                <div class="contenedorpro__hijo1">
                     <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
                         alt="foto de remera simple">
                     <h2>Remera simple</h2>
@@ -88,7 +88,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo">
+                <div class="contenedorpro__hijo2">
                     <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
                         alt="foto de remera con estampado pequeño">
                     <h2>Remera con estampado pequeño</h2>
@@ -98,7 +98,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo">
+                <div class="contenedorpro__hijo3">
                     <img src="../img/TX04.png" alt="foto de remera con estampado grande">
                     <h2>Remera con estampado grande</h2>
                     <p>15$</p>
@@ -106,6 +106,104 @@
                     <span>S</span>
                     <span>M</span>
                     <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo4">
+                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
+                        alt="foto de remera simple">
+                    <h2>Remera simple</h2>
+                    <p>20$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo5">
+                    <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
+                        alt="foto de remera con estampado pequeño">
+                    <h2>Remera con estampado pequeño</h2>
+                    <p>30$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo6">
+                    <img src="../img/TX04.png" alt="foto de remera con estampado grande">
+                    <h2>Remera con estampado grande</h2>
+                    <p>15$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo7">
+                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
+                        alt="foto de remera simple">
+                    <h2>Remera simple</h2>
+                    <p>20$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo8">
+                    <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
+                        alt="foto de remera con estampado pequeño">
+                    <h2>Remera con estampado pequeño</h2>
+                    <p>30$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo9">
+                    <img src="../img/TX04.png" alt="foto de remera con estampado grande">
+                    <h2>Remera con estampado grande</h2>
+                    <p>15$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo10">
+                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
+                        alt="foto de remera simple">
+                    <h2>Remera simple</h2>
+                    <p>20$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo11">
+                    <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
+                        alt="foto de remera con estampado pequeño">
+                    <h2>Remera con estampado pequeño</h2>
+                    <p>30$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo12">
+                    <img src="../img/TX04.png" alt="foto de remera con estampado grande">
+                    <h2>Remera con estampado grande</h2>
+                    <p>15$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
+                <div class="contenedorpro__hijo13">
+                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
+                        alt="foto de remera simple">
+                    <h2>Remera simple</h2>
+                    <p>20$</p>
+                    <h3>Talles</h3>
+                    <span>S</span>
+                    <span>M</span>
+                    <span>L</span>
+                </div>
                 </div>
             </section>
         </main>
