inicio de modelos de la pag de productos, cambio de nombre de las imagenes, se importo google fonts y agregue un estilo de letra a productos

--- a/pages/nos.html
+++ b/pages/nos.html
@@ -8,12 +8,17 @@
     <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras, nosotros, info, creacion">
     <meta name="description"
         content="Elaisa es una marca de ropa creada en 1980 por Ricardo Rodriguez en su afan de crear y diseñar">
-    <!--css y BT-->
+    <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- css -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- estilo de letra -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-    <title>Nosotros</title>
+    <title>¿Quienes Somos?</title>
 
 </head>
 
@@ -23,28 +28,29 @@
             <header>
                 <nav class="navbar navbar-expand-sm nav1">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
-                            alt="Logo de la Marca Elaisa"></a>
-                                <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                    aria-controls="offcanvasRight"><img src="../img/nav-icon.png" alt="icono nav"></button>
+                        <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-Logo.png"
+                                alt="Logo de la Marca Elaisa"></a>
+                        <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img
+                                src="../img/nav__icon.png" alt="icono nav"></button>
                         </button>
                         <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                             id="navbarSupportedContent">
                             <ul class="navbar-nav desk">
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png"
+                                    <a class="nav-link" id="a" href="pro.html"><img src="../img/nav__clothes.png"
                                             alt="icono de ropa"> Productos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png"
+                                    <a class="nav-link" id="a" href="proy.html"><img src="../img/nav__rocket.png"
                                             alt="icono de proyectos">Proyectos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png"
+                                    <a class="nav-link" id="a" href="nos.html"><img src="../img/nav__about-us-22.png"
                                             alt="icono de nosotros">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png"
+                                    <a class="nav-link" id="a" href="contact.html"><img src="../img/nav__people.png"
                                             alt="icono de contacto">Contacto</a>
                                 </li>
                             </ul>
@@ -53,32 +59,37 @@
                 </nav>
                 <nav>
                     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                    aria-labelledby="offcanvasRightLabel">
-                    <div class="offcanvas-header buscbot d-flex justify-content-end">
-                        <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body buscbot">
+                        aria-labelledby="offcanvasRightLabel">
+                        <div class="offcanvas-header buscbot d-flex justify-content-end">
+                            <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body buscbot">
                             <ul class="navbar-nav buscbot__phone">
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png" alt="icono de ropa"> Productos</a>
+                                    <a class="nav-link" id="a" href="pro.html"><img src="../img/nav__clothes.png"
+                                            alt="icono de ropa"> Productos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png" alt="icono de proyectos">Proyectos</a>
+                                    <a class="nav-link" id="a" href="proy.html"><img src="../img/nav__rocket.png"
+                                            alt="icono de proyectos">Proyectos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png" alt="icono de nosotros">Nosotros</a>
+                                    <a class="nav-link" id="a" href="nos.html"><img src="../img/nav__about-us-22.png"
+                                            alt="icono de nosotros">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png" alt="icono de contacto">Contacto</a>
+                                    <a class="nav-link" id="a" href="contact.html"><img src="../img/nav__people.png"
+                                            alt="icono de contacto">Contacto</a>
                                 </li>
                             </ul>
+                        </div>
                     </div>
-                </div>
                 </nav>
             </header>
             <main class="contenedornos">
                 <div class="contenedornos__div">
-                    <h1 class="contenedornos__div__h1" id="h1">¿Quienes somos?</h1>
+                    <h1 class="contenedornos__div__h1">¿Quienes somos?</h1>
                     <p class="contenedornos__div__p1">Elaisa es una marca de ropa creada en 1980 por Ricardo Rodriguez
                         en su afan de crear y diseñar prendas de vestir con diseños fabulosos para la comunidad. Y poco
                         a poco, se fue ganando renombre entre las marcas locales hasta llegar a un nivel mundial.
@@ -86,8 +97,7 @@
                 </div>
                 <p class="contenedornos__p2 d-md-none d-sm-inline">Elaisa es una marca de ropa creada en 1980 por
                     Ricardo Rodriguez en su afan de crear y diseñar</p>
-                <img src="../img/nombres_para_tiendas_de_ropa_en_ingles_50891_5_600.jpg" alt="La buena atención"
-                    class="contenedornos__img">
+                <img src="../img/imgNos.jpg" alt="La buena atención" class="contenedornos__img">
             </main>
             <footer class=" footer">
                 <p class="footer__subt">Seguinos en nuestras redes</p>
@@ -105,4 +115,5 @@
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
