--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras">
     <meta name="description"
         content="Elaisa es una marca distinta a las demas ya que te ofrece calidad y confort a la vez a un precio accesible">
-    <!--css, BT y animaciones-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- estilo de letra -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <!-- animaciones -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Elaisa tienda de ropa</title>
 </head>
 
@@ -21,29 +27,29 @@
         <header>
             <nav class="navbar navbar-expand-sm nav1">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html"><img src="img/ELaisa-removebg-preview (2).png"
+                    <a class="navbar-brand" href="index.html"><img src="img/ELaisa-Logo.png"
                             alt="Logo de la Marca Elaisa" class="d-md-none d-sm-inline logo"></a>
                     <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="img/nav-icon.png"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="img/nav__icon.png"
                             alt="icono nav"></button>
                     </button>
                     <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                         id="navbarSupportedContent">
                         <ul class="navbar-nav desk">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/clothes.png"
+                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/nav__clothes.png"
                                         alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/rocket.png"
+                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/nav__rocket.png"
                                         alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/about-us-22.png"
+                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/nav__about-us-22.png"
                                         alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/people.png"
+                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/nav__people.png"
                                         alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
@@ -60,19 +66,19 @@
                     <div class="offcanvas-body buscbot">
                         <ul class="navbar-nav buscbot__phone">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/clothes.png"
+                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/nav__clothes.png"
                                         alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/rocket.png"
+                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/nav__rocket.png"
                                         alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/about-us-22.png"
+                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/nav__about-us-22.png"
                                         alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/people.png"
+                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/nav__people.png"
                                         alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
@@ -82,12 +88,12 @@
         </header>
         <main class="mainindex">
             <section class="mainindex__sec1">
-                <video src="video/[FREE DRONE FOOTAGE] Sea 002 _ 4K 24fps.gif" autoplay loop muted
+                <video src="video/vid-index.gif" autoplay loop muted
                     class="mainindex__sec1__video" alt="video de un oceanao">
                 </video>
             </section>
             <section class="mainindex__sec2">
-                <img src="img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"
+                <img src="img/ELaisa-Logo.png" alt="Logo de la Marca Elaisa"
                     class="mainindex__sec2__logo">
                 <p>CALIDAD Y CONFORT A LA DISPOSICION DEL CLIENTE</p>
             </section>
@@ -132,7 +138,7 @@
                 <h2>Donde encontrarnos</h2>
                 <div class="mainindex__sec4__div1" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
-                    <img src="img/maxresdefault.jpg" alt="sede de Cipolletti">
+                    <img src="img/sed-1.jpg" alt="sede de Cipolletti">
                     <h3>Sede de Cipolletti</h3>
                     <p>
                         Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
@@ -142,7 +148,7 @@
                 </div>
                 <div class="mainindex__sec4__div2" data-aos="fade-left" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
-                    <img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
+                    <img src="img/sed-2.jpg" alt="sede de Allen">
                     <h3>Sede de Allen</h3>
                     <p>
                         Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
@@ -152,7 +158,7 @@
                 </div>
                 <div class="mainindex__sec4__div3" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
-                    <img src="img/Esprit sede interior 728.jpg" alt="sede de roca">
+                    <img src="img/sed-3.jpg" alt="sede de roca">
                     <h3>Sede de Roca</h3>
                     <p>
                         Nuestra mas nueva sucursal que abrio este año que desde entonces ha sido un rotundo exito.
@@ -161,34 +167,36 @@
                 </div>
                 <div class="mainindex__sec4__boton"><button><a href="pages/contact.html">CONTACTANOS</a></button></div>
             </section>
-        <!-- mobile -->
+            <!-- mobile -->
             <section class="mainindex__sec4m">
                 <h2>Donde encontrarnos</h2>
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="img/Esprit sede interior 728.jpg" alt="sede de roca" class="d-block w-100">
-                        <h3>Sede de Roca</h3>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen" class="d-block w-100">
-                        <h3>Sede de Allen</h3>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/maxresdefault.jpg" alt="sede de Cipolletti" class="d-block w-100">
-                        <h3>Sede de Cipolletti</h3>
-                      </div>
+                        <div class="carousel-item active">
+                            <img src="img/Esprit sede interior 728.jpg" alt="sede de roca" class="d-block w-100">
+                            <h3>Sede de Roca</h3>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen" class="d-block w-100">
+                            <h3>Sede de Allen</h3>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/maxresdefault.jpg" alt="sede de Cipolletti" class="d-block w-100">
+                            <h3>Sede de Cipolletti</h3>
+                        </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
                     </button>
-                  </div>
-                  <div class="mainindex__sec4m__boton"><button><a href="pages/contact.html">CONTACTANOS</a></button></div>
+                </div>
+                <div class="mainindex__sec4m__boton"><button><a href="pages/contact.html">CONTACTANOS</a></button></div>
             </section>
         </main>
         <footer class="footer">
