--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,11 +8,16 @@
     <meta name="keywords" content="Elaisa, tienda de ropa, ropa, prendas, remeras, contacto, inicia sesion, sesion">
     <meta name="description"
         content="Crea tu perfil para que puedas acceder a las ofertas y recibir todas la novedades">
-    <!--css y BT-->
+    <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- css -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Contacto</title>
+    <!-- estilo de letra -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <title>Contacto Elaisa</title>
 </head>
 
 <body>
@@ -20,29 +25,58 @@
         <header>
             <nav class="navbar navbar-expand-sm nav1">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
+                    <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-Logo.png"
                             alt="Logo de la Marca Elaisa"></a>
                     <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="../img/nav-icon.png"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="../img/nav__icon.png"
                             alt="icono nav"></button>
                     </button>
                     <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                         id="navbarSupportedContent">
                         <ul class="navbar-nav desk">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png"
+                                <a class="nav-link" id="a" href="pro.html"><img src="../img/nav__clothes.png"
                                         alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png"
+                                <a class="nav-link" id="a" href="proy.html"><img src="../img/nav__rocket.png"
                                         alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png"
+                                <a class="nav-link" id="a" href="nos.html"><img src="../img/nav__about-us-22.png"
                                         alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png"
+                                <a class="nav-link" id="a" href="contact.html"><img src="../img/nav__people.png"
+                                        alt="icono de contacto">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <nav>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+                    aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header buscbot d-flex justify-content-end">
+                        <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body buscbot">
+                        <ul class="navbar-nav buscbot__phone">
+                            <li class="nav-item">
+                                <a class="nav-link" id="a" href="pro.html"><img src="../img/nav__clothes.png"
+                                        alt="icono de ropa"> Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="a" href="proy.html"><img src="../img/nav__rocket.png"
+                                        alt="icono de proyectos">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="a" href="nos.html"><img src="../img/nav__about-us-22.png"
+                                        alt="icono de nosotros">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="a" href="contact.html"><img src="../img/nav__people.png"
                                         alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
