--- a/pages/pro.html
+++ b/pages/pro.html
@@ -9,12 +9,16 @@
         content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras, Remera Simple, Remera con estampado pequeño, Remera con estampado grande, remera, talles, precios">
     <meta name="description"
         content="Nuestra variedad de productos va cambiando de temporada a temporada asi que apurate para aprovecharlo">
-    <!--css y BT-->
+    <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- css -->
     <link rel="stylesheet" href="../css/style.css">
-
-    <title>Productos</title>
+    <!-- estilo de letra -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <title>Productos Elaisa</title>
 </head>
 
 <body>
@@ -22,28 +26,29 @@
         <header>
             <nav class="navbar navbar-expand-sm nav1">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
-                        alt="Logo de la Marca Elaisa"></a>
-                            <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                aria-controls="offcanvasRight"><img src="../img/nav-icon.png" alt="icono nav"></button>
+                    <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-Logo.png"
+                            alt="Logo de la Marca Elaisa"></a>
+                    <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="../img/nav__icon.png"
+                            alt="icono nav"></button>
                     </button>
                     <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                         id="navbarSupportedContent">
                         <ul class="navbar-nav desk">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png"
+                                <a class="nav-link" id="a" href="pro.html"><img src="../img/nav__clothes.png"
                                         alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png"
+                                <a class="nav-link" id="a" href="proy.html"><img src="../img/nav__rocket.png"
                                         alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png"
+                                <a class="nav-link" id="a" href="nos.html"><img src="../img/nav__about-us-22.png"
                                         alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png"
+                                <a class="nav-link" id="a" href="contact.html"><img src="../img/nav__people.png"
                                         alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
@@ -52,33 +57,38 @@
             </nav>
             <nav>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                aria-labelledby="offcanvasRightLabel">
-                <div class="offcanvas-header buscbot d-flex justify-content-end">
-                    <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body buscbot">
+                    aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header buscbot d-flex justify-content-end">
+                        <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body buscbot">
                         <ul class="navbar-nav buscbot__phone">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png" alt="icono de ropa"> Productos</a>
+                                <a class="nav-link" id="a" href="pro.html"><img src="../img/nav__clothes.png"
+                                        alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png" alt="icono de proyectos">Proyectos</a>
+                                <a class="nav-link" id="a" href="proy.html"><img src="../img/nav__rocket.png"
+                                        alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png" alt="icono de nosotros">Nosotros</a>
+                                <a class="nav-link" id="a" href="nos.html"><img src="../img/nav__about-us-22.png"
+                                        alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png" alt="icono de contacto">Contacto</a>
+                                <a class="nav-link" id="a" href="contact.html"><img src="../img/nav__people.png"
+                                        alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
+                    </div>
                 </div>
-            </div>
             </nav>
         </header>
-        <main>
+        <main class="mainpro">
             <h1>Nuestros productos</h1>
-            <section class="contenedorpro">
-                <div class="contenedorpro__hijo1">
+            <section class="mainpro__contenedorpro">
+                <div class="mainpro__contenedorpro__hijo1">
                     <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
                         alt="foto de remera simple">
                     <h2>Remera simple</h2>
@@ -88,7 +98,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo2">
+                <div class="mainpro__contenedorpro__hijo2">
                     <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
                         alt="foto de remera con estampado pequeño">
                     <h2>Remera con estampado pequeño</h2>
@@ -98,7 +108,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo3">
+                <div class="mainpro__contenedorpro__hijo3">
                     <img src="../img/TX04.png" alt="foto de remera con estampado grande">
                     <h2>Remera con estampado grande</h2>
                     <p>15$</p>
@@ -107,7 +117,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo4">
+                <div class="mainpro__contenedorpro__hijo4">
                     <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
                         alt="foto de remera simple">
                     <h2>Remera simple</h2>
@@ -117,7 +127,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo5">
+                <div class="mainpro__contenedorpro__hijo5">
                     <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
                         alt="foto de remera con estampado pequeño">
                     <h2>Remera con estampado pequeño</h2>
@@ -127,7 +137,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo6">
+                <div class="mainpro__contenedorpro__hijo6">
                     <img src="../img/TX04.png" alt="foto de remera con estampado grande">
                     <h2>Remera con estampado grande</h2>
                     <p>15$</p>
@@ -136,7 +146,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo7">
+                <div class="mainpro__contenedorpro__hijo7">
                     <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
                         alt="foto de remera simple">
                     <h2>Remera simple</h2>
@@ -146,7 +156,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo8">
+                <div class="mainpro__contenedorpro__hijo8">
                     <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
                         alt="foto de remera con estampado pequeño">
                     <h2>Remera con estampado pequeño</h2>
@@ -156,7 +166,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo9">
+                <div class="mainpro__contenedorpro__hijo9">
                     <img src="../img/TX04.png" alt="foto de remera con estampado grande">
                     <h2>Remera con estampado grande</h2>
                     <p>15$</p>
@@ -165,7 +175,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo10">
+                <div class="mainpro__contenedorpro__hijo10">
                     <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
                         alt="foto de remera simple">
                     <h2>Remera simple</h2>
@@ -175,7 +185,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo11">
+                <div class="mainpro__contenedorpro__hijo11">
                     <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
                         alt="foto de remera con estampado pequeño">
                     <h2>Remera con estampado pequeño</h2>
@@ -185,7 +195,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo12">
+                <div class="mainpro__contenedorpro__hijo12">
                     <img src="../img/TX04.png" alt="foto de remera con estampado grande">
                     <h2>Remera con estampado grande</h2>
                     <p>15$</p>
@@ -194,7 +204,7 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                <div class="contenedorpro__hijo13">
+                <div class="mainpro__contenedorpro__hijo13">
                     <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
                         alt="foto de remera simple">
                     <h2>Remera simple</h2>
@@ -204,19 +214,19 @@
                     <span>M</span>
                     <span>L</span>
                 </div>
-                </div>
-            </section>
-        </main>
-        <footer class="footer">
-            <p class="footer__subt">Seguinos en nuestras redes</p>
-            <div>
-                <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
-                        alt="logo de facebook"></a>
-                <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
-                        alt="logo de instagram"></a>
-            </div>
-            <p>Todos los derechos reservados</p>
-        </footer>
+    </div>
+    </section>
+    </main>
+    <footer class="footer">
+        <p class="footer__subt">Seguinos en nuestras redes</p>
+        <div>
+            <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
+                    alt="logo de facebook"></a>
+            <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
+                    alt="logo de instagram"></a>
+        </div>
+        <p>Todos los derechos reservados</p>
+    </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
