creado de la pagina productos, cambios en los productos del index y 50% de la vista mobila de productos

--- a/index.html
+++ b/index.html
@@ -105,29 +105,20 @@
                             alt="foto de remera simple">
                         <h2>Remera simple</h2>
                         <p><span class="s1">20$</span> <span>15$</span></p>
-                        <h3>Talles</h3>
-                        <span>S</span>
-                        <span>M</span>
-                        <span>L</span>
+                        <button type="button" class="btn btn-primary">Comprar</button>
                     </div>
                     <div class="mainindex__sec3__contenedorpro__hijo">
                         <img src="img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
                             alt="foto de remera con estampado pequeño">
                         <h2>Remera con estampado pequeño</h2>
                         <p><span class="s1">30$</span> <span>20$</span></p>
-                        <h3>Talles</h3>
-                        <span>S</span>
-                        <span>M</span>
-                        <span>L</span>
+                        <button type="button" class="btn btn-primary">Comprar</button>
                     </div>
                     <div class="mainindex__sec3__contenedorpro__hijo">
                         <img src="img/TX04.png" alt="foto de remera con estampado grande">
                         <h2>Remera con estampado grande</h2>
                         <p><span class="s1">15$</span> <span>8$</span></p>
-                        <h3>Talles</h3>
-                        <span>S</span>
-                        <span>M</span>
-                        <span>L</span>
+                        <button type="button" class="btn btn-primary">Comprar</button>
                     </div>
                 </div>
                 <div class="mainindex__sec3__boton"><button><a href="pages/pro.html">MÁS PRODUCTOS</a></button></div>
@@ -138,7 +129,7 @@
                 <h2>Donde encontrarnos</h2>
                 <div class="mainindex__sec4__div1" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
-                    <img src="img/sed-1.jpg" alt="sede de Cipolletti">
+                    <img src="img/index__sed-1.jpg" alt="sede de Cipolletti">
                     <h3>Sede de Cipolletti</h3>
                     <p>
                         Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
@@ -148,7 +139,7 @@
                 </div>
                 <div class="mainindex__sec4__div2" data-aos="fade-left" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
-                    <img src="img/sed-2.jpg" alt="sede de Allen">
+                    <img src="img/index__sed-2.jpg" alt="sede de Allen">
                     <h3>Sede de Allen</h3>
                     <p>
                         Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
@@ -158,7 +149,7 @@
                 </div>
                 <div class="mainindex__sec4__div3" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easing="ease-in-sine">
-                    <img src="img/sed-3.jpg" alt="sede de roca">
+                    <img src="img/index__sed-3.jpg" alt="sede de roca">
                     <h3>Sede de Roca</h3>
                     <p>
                         Nuestra mas nueva sucursal que abrio este año que desde entonces ha sido un rotundo exito.
@@ -173,15 +164,15 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/Esprit sede interior 728.jpg" alt="sede de roca" class="d-block w-100">
+                            <img src="img/index__sed-3.jpg" alt="sede de roca" class="d-block w-100">
                             <h3>Sede de Roca</h3>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen" class="d-block w-100">
+                            <img src="img/index__sed-2.jpg" alt="sede de Allen" class="d-block w-100">
                             <h3>Sede de Allen</h3>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/maxresdefault.jpg" alt="sede de Cipolletti" class="d-block w-100">
+                            <img src="img/index__sed-1.jpg" alt="sede de Cipolletti" class="d-block w-100">
                             <h3>Sede de Cipolletti</h3>
                         </div>
                     </div>
