--- a/pages/pro.html
+++ b/pages/pro.html
@@ -89,144 +89,89 @@
             <h1>Nuestros productos</h1>
             <section class="mainpro__contenedorpro">
                 <div class="mainpro__contenedorpro__hijo1">
-                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
-                        alt="foto de remera simple">
-                    <h2>Remera simple</h2>
+                    <img src="../img/hijo1.png" alt="medias de color azul">
+                    <h2>MediasB</h2>
                     <p>20$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo2">
-                    <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
-                        alt="foto de remera con estampado pequeño">
-                    <h2>Remera con estampado pequeño</h2>
-                    <p>30$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <img src="../img/hijo2.png" alt="un vestido azul con estampados">
+                    <h2>LightB2</h2>
+                    <p>60$</p>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo3">
-                    <img src="../img/TX04.png" alt="foto de remera con estampado grande">
-                    <h2>Remera con estampado grande</h2>
-                    <p>15$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <img src="../img/hijo3.png" alt="vestido LightB color azul">
+                    <h2>LightB</h2>
+                    <p>50$</p>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo4">
-                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
-                        alt="foto de remera simple">
-                    <h2>Remera simple</h2>
+                    <img src="../img/hijo4.png" alt="remera de color azul">
+                    <h2>JeansB</h2>
                     <p>20$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo5">
-                    <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
-                        alt="foto de remera con estampado pequeño">
-                    <h2>Remera con estampado pequeño</h2>
-                    <p>30$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <img src="../img/hijo5.png" alt="foto de remera azul sin estampado">
+                    <h2>Bluney</h2>
+                    <p>20$</p>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo6">
-                    <img src="../img/TX04.png" alt="foto de remera con estampado grande">
-                    <h2>Remera con estampado grande</h2>
-                    <p>15$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <img src="../img/hijo6.png" alt="foto de remera con estampado grande">
+                    <h2>PantC</h2>
+                    <p>45$</p>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo7">
-                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
-                        alt="foto de remera simple">
-                    <h2>Remera simple</h2>
+                    <img src="../img/hijo7.png" alt="foto de remera celeste oscuro">
+                    <h2>DarkC</h2>
                     <p>20$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo8">
-                    <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
-                        alt="foto de remera con estampado pequeño">
-                    <h2>Remera con estampado pequeño</h2>
-                    <p>30$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <img src="../img/hijo8.png" alt="remera con estampado pequeño y color celeste con raya blanca">
+                    <h2>LightE</h2>
+                    <p>15$</p>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo9">
-                    <img src="../img/TX04.png" alt="foto de remera con estampado grande">
-                    <h2>Remera con estampado grande</h2>
-                    <p>15$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <img src="../img/hijo9.png" alt="brazalete de un color celeste">
+                    <h2>Celestyn</h2>
+                    <p>20$</p>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo10">
-                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
-                        alt="foto de remera simple">
-                    <h2>Remera simple</h2>
-                    <p>20$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <img src="../img/hijo10.png" alt="un vestido celeste">
+                    <h2>Celest</h2>
+                    <p>50$</p>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo11">
-                    <img src="../img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
-                        alt="foto de remera con estampado pequeño">
-                    <h2>Remera con estampado pequeño</h2>
+                    <img src="../img/hijo11.png" alt="medias color celeste">
+                    <h2>MediasC</h2>
                     <p>30$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
                 <div class="mainpro__contenedorpro__hijo12">
-                    <img src="../img/TX04.png" alt="foto de remera con estampado grande">
-                    <h2>Remera con estampado grande</h2>
-                    <p>15$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
-                </div>
-                <div class="mainpro__contenedorpro__hijo13">
-                    <img src="../img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
-                        alt="foto de remera simple">
-                    <h2>Remera simple</h2>
+                    <img src="../img/hijo12.png">
+                    <h2>LightE2</h2>
                     <p>20$</p>
-                    <h3>Talles</h3>
-                    <span>S</span>
-                    <span>M</span>
-                    <span>L</span>
+                    <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
-    </div>
-    </section>
-    </main>
-    <footer class="footer">
-        <p class="footer__subt">Seguinos en nuestras redes</p>
-        <div>
-            <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
-                    alt="logo de facebook"></a>
-            <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
-                    alt="logo de instagram"></a>
-        </div>
-        <p>Todos los derechos reservados</p>
-    </footer>
+            </section>
+        </main>
+        <footer class="footer">
+            <p class="footer__subt">Seguinos en nuestras redes</p>
+            <div>
+                <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
+                        alt="logo de facebook"></a>
+                <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
+                        alt="logo de instagram"></a>
+            </div>
+            <p>Todos los derechos reservados</p>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
